--- a/cmd/res/profiles/OpcuaServer.yaml
+++ b/cmd/res/profiles/OpcuaServer.yaml
@@ -36,7 +36,7 @@ deviceResources:
       valueType: "String"
       readWrite: "R"
     attributes:
-      { namespace: "5", method: "Defaults", object: "", isMethod: true }
+      { namespace: "5", method: "Defaults", object: "" }
   -
     name: "AddNodeMethod"
     description: "Add a Node to the OPCUA Server"
@@ -48,7 +48,6 @@ deviceResources:
         namespace: "5",
         method: "NewNode",
         object: "",
-        isMethod: true,
         inputMap: [ "MyNewNode", "NewNode0", "int32" ],
       }
 
