ci: update workflow for self-hosted runner
- Optimize Dockerfile and Makefile
- Modify make test to run in a container

Signed-off-by: Jeff Titus <jeff.titus@se.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,4 +3,13 @@
 cmd/device-opcua
 cmd/device-opcua-arm64
 vendor
+test-artifacts
+
 .idea
+.git
+.github
+.gitignore
+.vscode
+.dockerignore
+
+Dockerfile
