--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,30 @@
 name: Go Build and Test
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+  push:
+    branches:
+      - main
 
 jobs:
-
   build:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux]
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.16
+      - name: Build
+        run: make docker
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+  test:
+    runs-on: [self-hosted, Linux]
+    steps:
+      - uses: actions/checkout@v2
 
-    - name: Install build pre-requisites
-      run: |
-        sudo apt-get update
-        sudo apt-get install libzmq3-dev libsodium-dev libsodium23=1.0.18-1
+      - name: Test
+        run: make test
 
-    - name: Build
-      run: make build
-
-    - name: Install Python pre-requisites
-      run: python3 -m pip install opcua
-
-    - name: Test
-      run: make test
-
-    - name: Upload test results
-      uses: actions/upload-artifact@v2
-      with:
-        name: test-artifacts
-        path: test-artifacts/*.*
+      - name: Upload test artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-artifacts
+          path: test-artifacts/*.*
