--- a/cmd/res/devices/devices.toml
+++ b/cmd/res/devices/devices.toml
@@ -7,3 +7,8 @@
   [DeviceList.Protocols]
       [DeviceList.Protocols.opcua]
           Endpoint = "opc.tcp://127.0.0.1:53530/OPCUA/SimulationServer"
+          Policy = "None"                   # Security policy: None, Basic128Rsa15, Basic256, Basic256Sha256. Default: None
+          Mode = "None"                     # Security mode: None, Sign, SignAndEncrypt. Default: None
+          CertFile = ""                     # Path to cert.pem. Required for security mode/policy != None
+          KeyFile = ""                      # Path to private key.pem. Required for security mode/policy != None
+          Resources = "Counter,Random"
