--- a/cmd/res/configuration.toml
+++ b/cmd/res/configuration.toml
@@ -1,11 +1,22 @@
+MaxEventSize = 0 
+
 [Service]
 HealthCheckInterval = "10s"
 Host = "localhost"
 Port = 59997
-ServerBindAddr = ""
+ServerBindAddr = ""  # blank value defaults to Service.Host value
 StartupMsg = "device opcua started"
-MaxRequestSize = 0
+# MaxRequestSize limit the request body size in byte of put command
+MaxRequestSize = 0 # value 0 unlimited request size.
 RequestTimeout = "5s"
+  [Service.CORSConfiguration]
+  EnableCORS = false
+  CORSAllowCredentials = false
+  CORSAllowedOrigin = "https://localhost"
+  CORSAllowedMethods = "GET, POST, PUT, PATCH, DELETE"
+  CORSAllowedHeaders = "Authorization, Accept, Accept-Language, Content-Language, Content-Type, X-Correlation-ID"
+  CORSExposeHeaders = "Cache-Control, Content-Language, Content-Length, Content-Type, Expires, Last-Modified, Pragma, X-Correlation-ID"
+  CORSMaxAge = 3600
 
 [Registry]
 Host = "localhost"
@@ -34,6 +45,9 @@ Type = "redis"
 AuthMode = "usernamepassword"  # required for redis messagebus (secure or insecure).
 SecretName = "redisdb"
 PublishTopicPrefix = "edgex/events/device" # /<device-profile-name>/<device-name>/<source-name> will be added to this Publish Topic prefix
+  [MessageQueue.Topics]
+  CommandRequestTopic = "edgex/device/command/request/device-opcua/#"   # subscribing for inbound command requests
+  CommandResponseTopicPrefix = "edgex/device/command/response"   # publishing outbound command responses; <device-service>/<device-name>/<command-name>/<method> will be added to this publish topic prefix
   [MessageQueue.Optional]
   # Default MQTT Specific options that need to be here to enable environment variable overrides of them
   # Client Identifiers
@@ -66,9 +80,19 @@ Path = "device-opcua/"
 Protocol = "http"
 RootCaCertPath = ""
 ServerName = ""
+SecretsFile = ""
+DisableScrubSecretsFile = false
 TokenFile = "/tmp/edgex/secrets/device-opcua/secrets-token.json"
   [SecretStore.Authentication]
   AuthType = "X-Vault-Token"
+  [SecretStore.RuntimeTokenProvider]
+  Enabled = false
+  Protocol = "https"
+  Host = "localhost"
+  Port = 59841
+  TrustDomain = "edgexfoundry.org"
+  EndpointSocket = "/tmp/edgex/secrets/spiffe/public/api.sock"
+  RequiredSecrets = "redisdb"
 
 [Writable]
 LogLevel = "INFO"
@@ -79,3 +103,19 @@ LogLevel = "INFO"
       [Writable.InsecureSecrets.Sample.Secrets]
       username = ""
       password = ""
+  [Writable.Reading]
+  ReadingUnits = true
+  [Writable.Telemetry]
+    Interval = "30s"
+    PublishTopicPrefix  = "edgex/telemetry" # /<service-name>/<metric-name> will be added to this Publish Topic prefix
+      [Writable.Telemetry.Metrics] # All service's metric names must be present in this list.
+      # Device SDK provided Service Metrics
+      EventsSent = false
+      ReadingsSent = false
+      # Common Security Service Metrics
+      SecuritySecretsRequested = false
+      SecuritySecretsStored = false
+      SecurityConsulTokensRequested = false
+      SecurityConsulTokenDuration = false
+      [Writable.Telemetry.Tags] # Contains the service level tags to be attached to all the service's metrics
+  #    Gateway="my-iot-gateway" # Tag must be added here since Env Override can only change existing value, not added new ones.
