refactor: use sdk to access logger and async channel
update unit tests and configurations

Signed-off-by: Jeff Titus <1756049+jrtitus@users.noreply.github.com>

--- a/cmd/res/devices/devices.yml
+++ b/cmd/res/devices/devices.yml
@@ -11,4 +11,4 @@ DeviceList:
         Mode: None
         CertFile: ""
         KeyFile: ""
-        Resources: "Counter,Random"
+        Resources: [Counter, Random]
