--- a/cmd/res/configuration.yaml
+++ b/cmd/res/configuration.yaml
@@ -1,109 +1,23 @@
 MaxEventSize: 0
-Service:
-  HealthCheckInterval: 10s
-  Host: localhost
-  Port: 59997
-  ServerBindAddr: ""
-  StartupMsg: device opcua started
-  MaxRequestSize: 0
-  RequestTimeout: 5s
-  CORSConfiguration:
-    EnableCORS: false
-    CORSAllowCredentials: false
-    CORSAllowedOrigin: "https://localhost"
-    CORSAllowedMethods: "GET, POST, PUT, PATCH, DELETE"
-    CORSAllowedHeaders: >-
-      Authorization, Accept, Accept-Language, Content-Language, Content-Type,
-      X-Correlation-ID
-    CORSExposeHeaders: >-
-      Cache-Control, Content-Language, Content-Length, Content-Type, Expires,
-      Last-Modified, Pragma, X-Correlation-ID
-    CORSMaxAge: 3600
-Registry:
-  Host: localhost
-  Port: 8500
-  CheckInterval: 10s
-  FailLimit: 3
-  FailWaitTime: 10
-  Type: consul
-Clients:
-  core-data:
-    Protocol: http
-    Host: localhost
-    Port: 59880
-  core-metadata:
-    Protocol: http
-    Host: localhost
-    Port: 59881
-MessageQueue:
-  Protocol: redis
-  Host: localhost
-  Port: 6379
-  Type: redis
-  AuthMode: usernamepassword
-  SecretName: redisdb
-  PublishTopicPrefix: edgex/events/device
-  Topics:
-    CommandRequestTopic: edgex/device/command/request/device-opcua/#
-    CommandResponseTopicPrefix: edgex/device/command/response
-  Optional:
-    ClientId: device-opcua
-    Qos: "0"
-    KeepAlive: "10"
-    Retained: "false"
-    AutoReconnect: "true"
-    ConnectTimeout: "5"
-    SkipCertVerify: "false"
-Device:
-  DataTransform: true
-  MaxCmdOps: 128
-  MaxCmdValueLen: 256
-  DevicesDir: ./res/devices
-  ProfilesDir: ./res/profiles
-  UpdateLastConnected: false
-  Labels: []
-  EnableAsyncReadings: true
-  AsyncBufferSize: 16
-  UseMessageBus: true
-SecretStore:
-  Type: vault
-  Host: localhost
-  Port: 8200
-  Path: device-opcua/
-  Protocol: http
-  RootCaCertPath: ""
-  ServerName: ""
-  SecretsFile: ""
-  DisableScrubSecretsFile: false
-  TokenFile: /tmp/edgex/secrets/device-opcua/secrets-token.json
-  Authentication:
-    AuthType: X-Vault-Token
-  RuntimeTokenProvider:
-    Enabled: false
-    Protocol: https
-    Host: localhost
-    Port: 59841
-    TrustDomain: edgexfoundry.org
-    EndpointSocket: /tmp/edgex/secrets/spiffe/public/api.sock
-    RequiredSecrets: redisdb
+
 Writable:
   LogLevel: INFO
   InsecureSecrets:
-    Sample:
-      path: redisdb
-      Secrets:
+    OPCUA:
+      SecretName: redisdb
+      SecretData:
         username: ""
         password: ""
-  Reading:
-    ReadingUnits: true
-  Telemetry:
-    Interval: 30s
-    PublishTopicPrefix: edgex/telemetry
-    Metrics:
-      EventsSent: false
-      ReadingsSent: false
-      SecuritySecretsRequested: false
-      SecuritySecretsStored: false
-      SecurityConsulTokensRequested: false
-      SecurityConsulTokenDuration: false
-    Tags: {}
+
+Service:
+  Host: localhost
+  Port: 59997
+  StartupMsg: device opcua started
+
+MessageBus:
+  Optional:
+    ClientId: device-opcua
+
+Device:
+  DevicesDir: ./res/devices
+  ProfilesDir: ./res/profiles
