--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -29,6 +29,7 @@ jobs:
           severity: CRITICAL,HIGH,MEDIUM
           output: trivy.txt
       - name: Publish Trivy Output to Summary
+        if: always()
         run: |
           if [[ -s trivy.txt ]]; then
             {
@@ -58,10 +59,12 @@ jobs:
           python3 -m pip install opcua cryptography
           go install gotest.tools/gotestsum@latest
       - name: Run unit tests
+        id: utest
         run: |
           go vet ./...
-          $(go env GOPATH)/bin/gotestsum --format testname -- -coverprofile=coverage.out ./... >> test-results.txt
+          $(go env GOPATH)/bin/gotestsum --jsonfile test-results.log -- -coverprofile=coverage.out ./... >> test-results.txt
       - name: Publish results to summary
+        if: always()
         run: |
           if [[ -s test-results.txt ]]; then
             {
@@ -72,3 +75,9 @@ jobs:
               echo '```'
             } >> $GITHUB_STEP_SUMMARY
           fi
+      - name: Publish verbose results on failure
+        if: steps.utest.conclusion == 'failure'
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: test-results.log
